example/User.Api/Error/Exceptions/BadRequestException.cs
namespace User.Api.Error.Exceptions
{
    public class BadRequestException : System.Exception
    {
        public BadRequestException(string message, System.Exception ex = null) : base(message, ex)
        {
        }
    }
}